[BE] refactor: user 주입 (#116)